# modern-sdlc-tool

./: .env.example  .gitignore  .replit  APPLICATION_GUIDE.md  ARCHITECTURE.md  FEATURES_DOCUMENTATION.md  package-lock.json  package.json  postcss.config.js  pyproject.toml  replit.md  run-python-backend.sh  start-dev.sh  tailwind.config.ts
attached_assets/: Pasted--172-31-80-98-55218-POST-api-brd-generate-HTTP-1-1-200-_1771677900416.txt  Pasted--45-59-PM-INFO-docugen-POST-api-brd-generate-200-in-405_1771678036229.txt  Pasted--POST-api-sessions-sess-3d19d1d8e7c2-artifacts-HTTP-1-1_1771666301214.txt  Pasted--id-oid-69987df563bce18b3606cea2-documentId-cd6ed599-84_1771601520773.txt  Pasted-03-58-58-PM-INFO-docugen-kb-vector-index-already-exists_1771689594377.txt  Pasted-05-51-16-PM-INFO-docugen-requirements-Generation-histor_1771609923656.txt  Pasted-06-11-22-PM-ERROR-docugen-ai-PwC-GenAI-API-Error-PwC-Ge_1771611105717.txt  Pasted-AM-INFO-docugen-POST-api-copilot-prompt-generate-500-in_1771666656019.txt  Pasted-Existing-System-Context-Components-APIs-and-data-models_1771691330772.txt  Pasted-Existing-System-Context-Components-APIs-and-data-models_1771691683485.txt  Pasted-Starting-Python-FastAPI-backend-Traceback-most-recent-c_1771500528293.txt  Pasted-considering-the-application-that-we-have-created-In-a-s_1769507415170.txt  Pasted-n-creat-e-anew-ticki-for-pay-role-validation-12-58-08-W_1770190148695.txt
client/: index.html
server/: ai.ts  index.ts  mongodb.ts  routes.ts  storage.ts
server_py/: ARCHITECTURE.md  BEFORE_AFTER.md  INDEX.md  MIGRATION_GUIDE.md  README.md  (+15 more)
(+241 files in other folders)
